<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/menuBg">

    <ImageView 
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/login_logo"
		android:layout_marginTop="120dp"
		android:layout_marginBottom="40dp"
    />
    <EditText
        android:id="@+id/email"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_first_row"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_last_row"
        android:hint="@string/passwordHint"
        android:layout_gravity="center"
        android:inputType="textPassword"
		android:layout_marginBottom="20dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_login"
        android:background="@drawable/button_bg_round"
        android:textColor="@color/buttonText"
        android:layout_width="240dp"
		android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/signIn" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/orText" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/register" 
        android:background="@color/menuBg"
        android:textColor="@color/hlText"/>

</LinearLayout>