<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="ButtonStyle" >

    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/regi_item_width"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="@drawable/text_box_first_row"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_gravity="center"
        android:layout_width="@dimen/regi_item_width"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_bg"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_gravity="center"
        android:layout_width="@dimen/regi_item_width"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_bg"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/username"
        android:layout_gravity="center"
        android:layout_width="@dimen/regi_item_width"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_last_row"
        android:hint="@string/usernameHint"
        android:inputType="textPassword"
        android:singleLine="true" />


    <Button
        android:id="@+id/btn_signup"
        android:background="@drawable/button_bg_round"
        android:textColor="@color/buttonText"
        android:layout_height="wrap_content"
   	 	android:layout_gravity="center"
    	android:layout_width="@dimen/regi_item_width"
    	android:layout_marginTop="20dp"
        android:text="@string/submit" />


</LinearLayout>