<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupBg"
    android:paddingTop="20dp"
    android:orientation="vertical" >
   	
    <TextView
        android:id="@+id/unlockConfirmStr"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/unlockConfirm" 
		android:textSize="@dimen/normal_text_size"
		android:textColor="@color/buttonBorder"
		android:layout_gravity="center"/>
    <TextView
        android:id="@+id/locationName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/hlText"
		android:textSize="@dimen/large_text_size"
		android:layout_gravity="center"/>

 	<LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:layout_gravity="center">
		<Button
		  android:id="@+id/verify"
		  android:layout_width="@dimen/button_width"
		  android:layout_height="wrap_content"
		  android:text="@string/confirm" 
		  android:textColor="@color/buttonText"
		  android:textSize="@dimen/large_text_size"
		  android:background="@drawable/button_bg_round"/>    
		<Button
		  android:id="@+id/cancel"
		  android:layout_width="@dimen/button_width"
		  android:layout_height="wrap_content"
		  android:text="@string/cancel" 
		  android:textColor="@color/buttonBorder"
		  android:textSize="@dimen/large_text_size"
		  android:background="@drawable/button_white_bg_round"
		  android:layout_marginLeft="@dimen/button_margin"/>    
	</LinearLayout>    

</LinearLayout>
