<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ButtonStyle,ContentDescription,TextFields,InefficientWeight" >

    <ImageView
        android:id="@+id/checkMark"
        android:layout_width="@dimen/verify_img_size"
        android:layout_height="@dimen/verify_img_size"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/verified" />

    <ImageView
        android:id="@+id/spotPic"
        android:layout_width="@dimen/verify_img_size"
        android:layout_height="@dimen/verify_img_size"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/spotName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hlText"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/verifiedMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifiedMsg"
            android:textColor="@color/buttonBorder"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/comment"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_camera" />
    </LinearLayout>

    <ListView
        android:id="@+id/commentList"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp" >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/send"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_round"
            android:text="@string/send"
            android:textColor="@color/buttonText"
            android:textSize="@dimen/large_text_size" />

        <Button
            android:id="@+id/back"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:background="@drawable/button_white_bg_round"
            android:text="@string/back"
            android:textColor="@color/buttonBorder"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

</LinearLayout>